// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSwitch Matches snapshot (desktop) 1`] = `
Array [
  .c0 {
  position: relative;
}

.c1 {
  cursor: pointer;
  background: #008533;
  border: 1px solid #008533;
  border-radius: 12px;
  height: 24px;
  position: absolute;
  width: 36px;
}

.c1[aria-checked="false"] {
  background: #9CA7B4;
  border-color: #9CA7B4;
}

.c1[aria-checked="false"] span {
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c1[aria-checked="true"] > span {
  right: 3px;
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c1:disabled {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

.c1:disabled[aria-checked="true"] {
  background: #99cead;
  border-color: #99cead;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c2 {
  background: #FFFFFF;
  border-radius: 100%;
  box-sizing: border-box;
  height: 16px;
  position: absolute;
  right: calc(100% - 19px);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 16px;
}

<div
    class="c0"
  >
    <button
      aria-checked="true"
      aria-readonly="false"
      class="c1"
      data-testid="test-toggle-switch"
      role="switch"
      type="button"
    >
      <span
        class="c2"
      />
    </button>
  </div>,
  .c0 {
  cursor: pointer;
  color: #000000;
  display: block;
  font-size: 0.875rem;
  left: 42px;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
    class="c0"
  >
    Switch
  </label>,
]
`;

exports[`ToggleSwitch Matches snapshot (mobile) 1`] = `
Array [
  .c0 {
  position: relative;
}

.c1 {
  cursor: pointer;
  background: #008533;
  border: 1px solid #008533;
  border-radius: 16px;
  height: 32px;
  position: absolute;
  width: 48px;
}

.c1[aria-checked="false"] {
  background: #9CA7B4;
  border-color: #9CA7B4;
}

.c1[aria-checked="false"] span {
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c1[aria-checked="true"] > span {
  right: 4px;
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c1:disabled {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

.c1:disabled[aria-checked="true"] {
  background: #99cead;
  border-color: #99cead;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c2 {
  background: #FFFFFF;
  border-radius: 100%;
  box-sizing: border-box;
  height: 22px;
  position: absolute;
  right: calc(100% - 26px);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 22px;
}

<div
    class="c0"
  >
    <button
      aria-checked="true"
      aria-readonly="false"
      class="c1"
      data-testid="test-toggle-switch"
      role="switch"
      type="button"
    >
      <span
        class="c2"
      />
    </button>
  </div>,
  .c0 {
  cursor: pointer;
  color: #000000;
  display: block;
  font-size: 1rem;
  left: 56px;
  line-height: 2rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
    class="c0"
  >
    Switch
  </label>,
]
`;

exports[`ToggleSwitch has disabled styles 1`] = `
Array [
  .c0 {
  position: relative;
}

.c1 {
  background: #008533;
  border: 1px solid #008533;
  border-radius: 12px;
  height: 24px;
  position: absolute;
  width: 36px;
}

.c1[aria-checked="false"] {
  background: #9CA7B4;
  border-color: #9CA7B4;
}

.c1[aria-checked="false"] span {
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c1[aria-checked="true"] > span {
  right: 3px;
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c1:disabled {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

.c1:disabled[aria-checked="true"] {
  background: #99cead;
  border-color: #99cead;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c2 {
  background: #FFFFFF;
  border-radius: 100%;
  box-sizing: border-box;
  height: 16px;
  position: absolute;
  right: calc(100% - 19px);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 16px;
}

<div
    class="c0"
  >
    <button
      aria-checked="true"
      aria-readonly="true"
      class="c1"
      data-testid="test-toggle-switch"
      disabled=""
      role="switch"
      type="button"
    >
      <span
        class="c2"
      />
    </button>
  </div>,
  .c0 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  left: 42px;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
    class="c0"
    disabled=""
  >
    Switch
  </label>,
]
`;
